# graduation-project

./: .gitignore  .~lock.l'.pptx#  Dockerfile  Pipfile  Virtual Lab presentation.pptx  db.sqlite3  definition_of_commands.md  docker-compose.yml  experiment_1.json  l'.pptx  manage.py  pyproject.toml  requirements.txt  setup.py
TeacherView/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
TeacherView/migrations/: 0001_initial.py  0002_alter_chemicals_name_alter_equipment_name_and_more.py  0003_steps_step.py  0004_remove_steps_step.py
authentication/: urls.py  views.py
book/: admin.py  dummy_data.py  models.py  urls.py  views.py
book/migrations/: 0001_initial.py  0002_cart.py
nginx/: nginx.conf
templates/: 3mmena.html  base.html  book_list.html  cart.html  create.html  experiment_detail.html  experiment_list.html  login.html  navbar.html  register.html
virtualLab/: asgi.py  settings.py  urls.py  wsgi.py
